gitops/apps/book/book-ui-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: book-ui
spec:
  ports:
  - name: http
    port: 80
    targetPort: http
  selector:
    app: book-ui
  type: NodePort
